--- a/YouTube++.plist
+++ b/YouTube++.plist
@@ -11,27 +11,19 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://flashapp.000webhostapp.com/AirShou.ipa</string>
+                    <string>http://flashapp.000webhostapp.com/YouTube++.ipa</string>
                 </dict>
-				     <dict>
-                   <key>kind</key>
-                   <string>display-image</string>
-                   <key>needs-shine</key>
-                   <true/>
-                   <key>url</key>
-                   <string>https://flashapp.000webhostapp.com/AppIcon.png</string>
-               </dict>
             </array>
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>xyz.FlashApp.AirShou</string>
+                <string>xyz.FlashApp.YouTube++</string>
                 <key>bundle-version</key>
                 <string>1.0.0</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>AirShou</string>
+                <string>YouTube++</string>
             </dict>
         </dict>
     </array>
