--- a/crossyroad.plist
+++ b/crossyroad.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>https://is.gd/ZTZm3u</string>
+                   <string>https://is.gd/xVHLPq</string>
                </dict>
                <dict>
                    <key>kind</key>
@@ -30,7 +30,7 @@
                <key>kind</key>
                <string>software</string>
                <key>title</key>
-               <string>Bike Race </string>
+               <string>Crossy Road</string>
            </dict>
        </dict>
    </array>
