--- a/inds.plist
+++ b/inds.plist
@@ -2,37 +2,38 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-   <key>items</key>
-   <array>
-       <dict>
-           <key>assets</key>
-           <array>
-               <dict>
-                   <key>kind</key>
-                   <string>software-package</string>
-                   <key>url</key>
-                   <string>http://downloads.iemulators.com/VXaZ+</string>
-               </dict>
-               <dict>
+    <key>items</key>
+    <array>
+        <dict>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>http://flashapp.000webhostapp.com/iNDS.ipa</string>
+                </dict>
+				     <dict>
                    <key>kind</key>
                    <string>display-image</string>
                    <key>needs-shine</key>
                    <true/>
                    <key>url</key>
-                   <string>https://41.media.tumblr.com/13f0eb88117cead5ba3bcc221e83da43/tumblr_nzqr8yduL51t0wlalo1_540.png</string>
+                   <string>https://flashapp.000webhostapp.com/AppIcon.png</string>
                </dict>
-           </array><key>metadata</key>
-           <dict>
-               <key>bundle-identifier</key>
-               <string>enjoy.goldenfalconos.iNDS</string>
-               <key>bundle-version</key>
-               <string>0.33.1</string>
-               <key>kind</key>
-               <string>software</string>
-               <key>title</key>
-               <string>iNDS</string>
-           </dict>
-       </dict>
-   </array>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>xyz.FlashApp.iNDS</string>
+                <key>bundle-version</key>
+                <string>1.0.0</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>title</key>
+                <string>iNDS</string>
+            </dict>
+        </dict>
+    </array>
 </dict>
 </plist>
