--- a/instagram.plist
+++ b/instagram.plist
@@ -2,37 +2,38 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-   <key>items</key>
-   <array>
-       <dict>
-           <key>assets</key>
-           <array>
-               <dict>
-                   <key>kind</key>
-                   <string>software-package</string>
-                   <key>url</key>
-                   <string>https://iresignosapp.tk/ipas/instagram++.ipa</string>
-               </dict>
-               <dict>
+    <key>items</key>
+    <array>
+        <dict>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>http://flashapp.000webhostapp.com/Instagram.ipa</string>
+                </dict>
+				     <dict>
                    <key>kind</key>
                    <string>display-image</string>
                    <key>needs-shine</key>
                    <true/>
                    <key>url</key>
-                   <string>http://iemuhub.us/img/instagram++.png</string>
+                   <string>https://flashapp.000webhostapp.com/AppIcon.png</string>
                </dict>
-           </array><key>metadata</key>
-           <dict>
-               <key>bundle-identifier</key>
-               <string>enjoy.iresignos.instagram++</string>
-               <key>bundle-version</key>
-               <string>1.0</string>
-               <key>kind</key>
-               <string>software</string>
-               <key>title</key>
-               <string>Instagram++ by iResignOS</string>
-           </dict>
-       </dict>
-   </array>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>xyz.FlashApp.Insta++</string>
+                <key>bundle-version</key>
+                <string>1.0.0</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>title</key>
+                <string>Insta++</string>
+            </dict>
+        </dict>
+    </array>
 </dict>
 </plist>
