--- a/moviebox.plist
+++ b/moviebox.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://flashapp.000webhostapp.com/AirShou.ipa</string>
+                    <string>http://flashapp.000webhostapp.com/MovieBox.ipa</string>
                 </dict>
 				     <dict>
                    <key>kind</key>
@@ -25,13 +25,13 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>xyz.FlashApp.AirShou</string>
+                <string>xyz.FlashApp.Moviebox</string>
                 <key>bundle-version</key>
                 <string>1.0.0</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>AirShou</string>
+                <string>Moviebox</string>
             </dict>
         </dict>
     </array>
