--- a/subwaysurf.plist
+++ b/subwaysurf.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>https://is.gd/ZTZm3u</string>
+                   <string>https://is.gd/hnlvwQ</string>
                </dict>
                <dict>
                    <key>kind</key>
@@ -19,18 +19,18 @@
                    <key>needs-shine</key>
                    <true/>
                    <key>url</key>
-                   <string>https://m.icydia.cf/img/icydia.png</string>
+                   <string>https://m.icydia.cf/logo.png</string>
                </dict>
            </array><key>metadata</key>
            <dict>
                <key>bundle-identifier</key>
-               <string>plists.icydia.bikerace</string>
+               <string>plists.icydia.subwaysurfers</string>
                <key>bundle-version</key>
                <string>1.0</string>
                <key>kind</key>
                <string>software</string>
                <key>title</key>
-               <string>Bike Race </string>
+               <string>Subway Surf</string>
            </dict>
        </dict>
    </array>
