--- a/templerun2.plist
+++ b/templerun2.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>http://hot.haima.me/infinite/201611/1625/com.imangi.templerun2_1.18.2_20161116171322_1_t8k3ue.ipa</string>
+                   <string>https://is.gd/j2M7Qg</string>
                </dict>
                <dict>
                    <key>kind</key>
@@ -19,18 +19,18 @@
                    <key>needs-shine</key>
                    <true/>
                    <key>url</key>
-                   <string>http://is3.mzstatic.com/image/thumb/Purple71/v4/f0/44/ab/f044abeb-6bfd-0540-2685-ed1131d8ab54/source/114x114bb.jpg</string>
+                   <string>https://m.icydia.cf/logo.png</string>
                </dict>
            </array><key>metadata</key>
            <dict>
                <key>bundle-identifier</key>
-               <string>enjoy.iresignos.templerun2</string>
+               <string>plists.icydia.templerun</string>
                <key>bundle-version</key>
                <string>1.0</string>
                <key>kind</key>
                <string>software</string>
                <key>title</key>
-               <string>Temple Run 2 Hacked by iResignOS</string>
+               <string>TempleRun 2</string>
            </dict>
        </dict>
    </array>
